tdf#52065 sw: revert tdf#45908: Cleaning up the tabs too early

... can cause loops
from LO 3.5 commit 36c905d8c2874f6f984d5fbbc07784ec20c43524

The PostFormat for Center and Decimal tabstops is critical
since the space they take up is unknown until the following
text is evaluated.
The search position in these two cases is invalid
until the text position is calculated by PostFormat.

PostFormat normally returns FALSE, so in almost all
cases the rest of NewTabPortion completes. The function only
returned early if the start of the tabstop was beyond
the right margin. I assume the original intent was to
avoid potentially unnecessary processing.
However, returning early can cause looping,
which the LO 3.5 commit "fixed" by removing everything.
Well, just remove the early return and both problems are solved.

Change-Id: I4afc4cce8249f90097bc1f263df1a39bc219098d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/112559
Tested-by: Jenkins
Reviewed-by: Justin Luth <justin_luth@sil.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>