sw/source/core/text/porlin.hxx
@@ -116,6 +116,8 @@ public:
     bool IsQuoVadisPortion() const { return mnWhichPor == PortionType::QuoVadis; }
     bool IsTabLeftPortion() const { return mnWhichPor == PortionType::TabLeft; }
     bool IsTabRightPortion() const { return mnWhichPor == PortionType::TabRight; }
+    bool IsTabCenterPortion() const { return mnWhichPor == PortionType::TabCenter; }
+    bool IsTabDecimalPortion() const { return mnWhichPor == PortionType::TabDecimal; }
     bool IsFootnoteNumPortion() const { return mnWhichPor == PortionType::FootnoteNum; }
     bool IsFootnotePortion() const { return mnWhichPor == PortionType::Footnote; }
     bool IsDropPortion() const { return mnWhichPor == PortionType::Drop; }
