sw/source/core/text/txttab.cxx
@@ -61,6 +61,12 @@ sal_uInt16 SwLineInfo::NumberOfTabStops() const
 
 SwTabPortion *SwTextFormatter::NewTabPortion( SwTextFormatInfo &rInf, bool bAuto ) const
 {
+    // Update search location - since Center/Decimal tabstops' width is dependent on the following text.
+    SwTabPortion  *pTmpLastTab = rInf.GetLastTab();
+    if( pTmpLastTab && ( pTmpLastTab->IsTabCenterPortion() || pTmpLastTab->IsTabDecimalPortion() ) )
+        if (pTmpLastTab->PostFormat( rInf ) )
+            return nullptr;
+
     sal_Unicode cFill = 0;
     sal_Unicode cDec = 0;
     SvxTabAdjust eAdj;
