sw/qa/extras/odfexport/odfexport.cxx
@@ -2642,6 +2642,15 @@ DECLARE_ODFEXPORT_TEST(testPageContentBottom, "page-content-bottom.odt")
     CPPUNIT_ASSERT_EQUAL(nExpected, getProperty<sal_Int16>(xShape, "VertOrientRelation"));
 }
 
+DECLARE_ODFEXPORT_TEST(testTdf52065_centerTabs, "testTdf52065_centerTabs.odt")
+{
+    sal_Int32 nTabStop = parseDump("//body/txt[4]/Text[3]", "nWidth").toInt32();
+    // Without the fix, the text was unseen, with a tabstop width of 64057. It should be 3057
+    CPPUNIT_ASSERT(nTabStop < 4000);
+    CPPUNIT_ASSERT(3000 < nTabStop);
+    CPPUNIT_ASSERT_EQUAL(OUString(u"Pečiatka zamestnávateľa"), parseDump("//body/txt[4]/Text[4]", "Portion"));
+}
+
 DECLARE_ODFEXPORT_EXPORTONLY_TEST(tdf124470, "tdf124470TableAndEmbeddedUsedFonts.odt")
 {
     // Table styles were exported out of place, inside font-face-decls.
